--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,14 @@
     tools:context="com.mardox.dictionaryapp.app.MainActivity"
     android:id="@+id/main_layout">
 
-    <LinearLayout
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/switch_language_bt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ff00a6dd"
+            android:textSize="25dp"
+            />
 
         <EditText
             android:id="@+id/query_et"
@@ -20,45 +20,55 @@
             android:inputType="text"
             android:hint="@string/search_hint"
             android:textSize="30dp"
+            android:layout_marginTop="8dp"
             android:imeOptions="actionSearch"
             android:textColorHighlight="#ff00a6dd"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/query_tv"
-            android:textSize="40dp"
-            android:textStyle="bold"
-            android:textColor="#ff00a6dd"
-            android:layout_marginTop="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/type_tv"
-            android:textSize="22dp"
-            android:textStyle="italic|bold"
-
-            android:textColor="#ff00a6dd"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/switch_language_bt"
+            android:layout_margin="10dp"
+            />
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_marginTop="20px"
+            android:layout_marginBottom="50px"
+            android:layout_below="@id/query_et"
+            android:layout_margin="10dp">
 
-        <TextView
-            android:id="@+id/description_tv"
-            android:textSize="33dp"
-            android:layout_marginTop="10dp"
-            android:textColor="#ff00a6dd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/query_tv"
+                    android:textSize="40dp"
+                    android:textStyle="bold"
+                    android:textColor="#ff00a6dd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/description_tv"
+                    android:textSize="33dp"
+                    android:layout_marginTop="5dp"
+                    android:textColor="#ff00a6dd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/type_tv"
+                    android:textSize="22dp"
+                    android:textStyle="italic|bold"
+                    android:textColor="#ff00a6dd"
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
 
         </ScrollView>
-
-    </LinearLayout>
-
 
 </RelativeLayout>
