--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
 
 
         <ScrollView
+            android:id="@+id/main_scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/query_et"
